chore(bsky): use shorthand syntax for latte contrast fix

--- a/styles/bsky/catppuccin.user.css
+++ b/styles/bsky/catppuccin.user.css
@@ -98,10 +98,8 @@
     [style*="color: rgb(11, 15, 20)"] {
       color: @text !important;
 
-      /* fix contrast issues */
-      & when not (@lookup = latte) {
-        color: @crust !important;
-      }
+      // fix contrast issues on latte
+      color: if(@lookup = latte, @text, @crust) !important;
     }
 
     /* secondary text */
